Добавлена константа для размера списка истории. Добавлен LinkedList для менеджера истоии. Добавлены методы для рабыты с LinkedList