@@ -1,23 +1,24 @@
 package manager;
 
 import model.*;
-import java.util.ArrayList;
+import java.util.LinkedList;
 import java.util.List;
 
 public class InMemoryHistoryManager implements HistoryManager {
-    private final List<Task> history = new ArrayList<>();
+    private static final int HISTORY_LIST_MAX_SIZE = 10;
+    private final LinkedList<Task> history = new LinkedList<>();
 
     @Override
     public void add(Task task) {
         history.add(task);
 
-        if (history.size() > 10) {
-            history.remove(0);
+        if (history.size() > HISTORY_LIST_MAX_SIZE) {
+            history.removeFirst();
         }
     }
 
     @Override
     public List<Task> getHistory() {
-        return new ArrayList<>(history);
+        return new LinkedList<>(history);
     }
 }
